fix snippet contract and change tab spacing

--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -63,8 +63,8 @@
 }
 
 .solarized-light {
-    --bg: var(--base3);
-    --fg: var(--base00);
+    --bg: var(--base2);
+    --fg: var(--base01);
     --title: var(--base01);
 
     --icons: var(--base01);
@@ -90,7 +90,7 @@
 }
 
 .solarized-dark {
-    --bg: var(--base03);
+    --bg: var(--base02);
     --fg: var(--base0);
     --title: var(--base1);
 
